--- a/BGEEClassicMovies/ReadMe-BGEEClassicMovies.html
+++ b/BGEEClassicMovies/ReadMe-BGEEClassicMovies.html
@@ -276,7 +276,7 @@
         <p class="about">
           <a href="http://www.shsforums.net/topic/55573-bg-ee-classic-movies/">Mod Website</a> &#8226;
           <a href="http://www.shsforums.net/topic/55573-bg-ee-classic-movies/">Mod Forum</a> &#8226;
-          Version: 0.02
+          Version: 0.03
         </p>
         <hr />
         <p class="menu">
@@ -293,7 +293,7 @@
         <a name="intro" id="intro"></a>
         <div class="content">
           <h2>Introduction</h2>
-          <p>This is a WeiDU mini-mod that restores the classic movies from the original Baldur’s Gate and select movies from Baldur’s Gate II to Baldur’s Gate:  Enhanced Edition.  This mod was developed for Baldur's Gate Enhanced Edition v1.0.2007, and will be considered a beta version as long as BG:EE is being updated.  Use at your own risk!  Questions, comments, suggestions, and bug reports are of course welcome.</p>
+          <p>This is a WeiDU mini-mod that restores the classic movies from the original Baldur’s Gate and select movies from Baldur’s Gate II to Baldur’s Gate:  Enhanced Edition.  It now also re-enables the Beregost movie when you first travel to the area.  This mod was developed for Baldur's Gate Enhanced Edition v1.0.2007, and will be considered a beta version as long as BG:EE is being updated.  Use at your own risk!  Questions, comments, suggestions, and bug reports are of course welcome.</p>
 	  <h5>The restored movies include:</h5>
 	  <br />
           <ul>
@@ -394,7 +394,7 @@
         <a name="faq" id="faq"></a>
         <div class="content">
           <h2>Frequently Asked Questions</h2>
-          <p><strong>Q: No questions yet.</strong><br />A: N/A</p>
+          <p><strong>Q: Why does MOVIDESC.2DA and Baldur.ini need to be modified?</strong><br />A: The Baldur.ini and MOVIDESC.2DA are modified so that all of the movies can be viewed in the "Movies" dialog of the GUI.  Since not all of the movies from BG1 are actually used in BGEE, this is the only way to watch them.</p>
           <address>
             <span class="footer">BG: EE Classic Movies &gt; FAQ</span> &#8226;<a href="#top">BACK TO TOP</a>
           </address>
@@ -428,6 +428,10 @@
           <h6>05 December 2012 - Version 0.02:</h6>
           <ul>
             <li>Added DAYNITE (Sunset movie), NITEDAY (Sunrise movie), RESTDUNG (Resting in dungeon movie), and RESTINN (Resting at inn movie) from BGII.</li>
+          </ul>
+          <h6>06 December 2012 - Version 0.03:</h6>
+          <ul>
+            <li>Re-enable the Beregost movie when you first travel to the area.</li>
           </ul>
           <address>
             <span class="footer">BG: EE Classic Movies &gt; Version History</span> &#8226;<a href="#top">BACK TO TOP</a>
