--- a/BGEEClassicMovies/ReadMe-BGEEClassicMovies.html
+++ b/BGEEClassicMovies/ReadMe-BGEEClassicMovies.html
@@ -276,7 +276,7 @@
         <p class="about">
           <a href="http://www.shsforums.net/topic/55573-bg-ee-classic-movies/">Mod Website</a> &#8226;
           <a href="http://www.shsforums.net/topic/55573-bg-ee-classic-movies/">Mod Forum</a> &#8226;
-          Version: 0.03
+          Version: 0.04
         </p>
         <hr />
         <p class="menu">
@@ -293,46 +293,48 @@
         <a name="intro" id="intro"></a>
         <div class="content">
           <h2>Introduction</h2>
-          <p>This is a WeiDU mini-mod that restores the classic movies from the original Baldur’s Gate and select movies from Baldur’s Gate II to Baldur’s Gate:  Enhanced Edition.  It now also re-enables the Beregost movie when you first travel to the area.  This mod was developed for Baldur's Gate Enhanced Edition v1.0.2007, and will be considered a beta version as long as BG:EE is being updated.  Use at your own risk!  Questions, comments, suggestions, and bug reports are of course welcome.</p>
+          <p>This is a WeiDU mini-mod that restores the classic movies from the original Baldur’s Gate and select movies from Baldur’s Gate II to Baldur’s Gate:  Enhanced Edition.  The classic movies have been resized to the same dimensions as the new BG:EE movies (1280x720) while maintaining their aspect ratios.  It also re-enables the Beregost movie when you first travel to the area.  This mod was developed for Baldur's Gate Enhanced Edition v1.0.2010, and will be considered a beta version as long as BG:EE is being updated.  Use at your own risk!  Questions, comments, suggestions, and bug reports are of course welcome.</p>
 	  <h5>The restored movies include:</h5>
 	  <br />
           <ul>
-            <li>Beregost</li>
-            <li>Black Isle Logo</li>
-            <li>Entering Baldur's Gate</li>
-            <li>BG Sunrise movie</li>
-            <li>BG Sunset movie</li>
-            <li>The Temple of Bhaal</li>
-            <li>BioWare Logo</li>
-            <li>Bioware logo movie</li>
-            <li>The Black Pits</li>
-            <li>Bandit Camp</li>
-            <li>Inside Candle Keep</li>
-            <li>Credits</li>
-            <li>Sunset movie</li>
-            <li>Death movie</li>
-            <li>The Dungeon</li>
-            <li>Entering Durlag's Tower</li>
-            <li>The Eldercity</li>
-            <li>End Movie</li>
-            <li>Conclusion</li>
-            <li>The Friendly Arm Inn</li>
-            <li>The Gnoll Stronghold</li>
-            <li>Infinity Engine Logo</li>
-            <li>Introduction</li>
-            <li>The Iron Throne</li>
-            <li>The Flooded Mine</li>
-            <li>Entering Nashkel</li>
-            <li>Sunrise movie</li>
-            <li>The Ducal Palace</li>
-            <li>Resting outside movie</li>
-            <li>Resting in dungeon movie</li>
-            <li>Resting at inn movie</li>
-            <li>The Sewers</li>
-            <li>The Tavern</li>
-            <li>TSR Logo</li>
-            <li>Across the Trackless Sea</li>
-            <li>The Wyvern</li>
+	    <li>Beregost</li>
+	    <li>Black Isle Logo</li>
+	    <li>Entering Baldur's Gate</li>
+	    <li>BG Sunrise movie</li>
+	    <li>BG Sunset movie</li>
+	    <li>The Temple of Bhaal</li>
+	    <li>BioWare Logo</li>
+	    <li>Bioware logo movie</li>
+	    <li>The Black Pits</li>
+	    <li>Bioware logo movie</li>
+	    <li>Bandit Camp</li>
+	    <li>Inside Candle Keep</li>
+	    <li>Credits</li>
+	    <li>Sunset movie</li>
+	    <li>Death movie</li>
+	    <li>The Dungeon</li>
+	    <li>Entering Durlag's Tower</li>
+	    <li>The Eldercity</li>
+	    <li>End Movie</li>
+	    <li>Conclusion</li>
+	    <li>The Friendly Arm Inn</li>
+	    <li>The Gnoll Stronghold</li>
+	    <li>Infinity Engine Logo</li>
+	    <li>Introduction</li>
+	    <li>The Iron Throne</li>
+	    <li>The Flooded Mine</li>
+	    <li>Entering Nashkel</li>
+	    <li>Sunrise movie</li>
+	    <li>The Ducal Palace</li>
+	    <li>Resting outside movie</li>
+	    <li>Resting in dungeon movie</li>
+	    <li>Resting at inn movie</li>
+	    <li>The Sewers</li>
+	    <li>The Tavern</li>
+	    <li>TSR Logo</li>
+	    <li>WOTC Logo</li>
+	    <li>Across the Trackless Sea</li>
+	    <li>The Wyvern</li>
           </ul>
 	  <address>
             <span class="footer">BG: EE Classic Movies &gt; Introduction</span> &#8226;<a href="#top">BACK TO TOP</a>
@@ -347,7 +349,8 @@
           <p>This is a WeiDU mod.  To install, unzip the RAR archive into your game folder <b>that has the chitin.key file</b> (usually "Baldur's Gate Enhanced Edition\Data\00766") and double-click on Setup-BGEEClassicMovies.exe.  To uninstall, double-click on BGEEClassicMovies.exe again and select the Uninstall option.</p>
 	  <p>Additionally, you will need to edit your Baldur.ini file by hand.  This is necessary in order to play the movies not used by BG:EE in the Movies GUI dialog.  It is usually located at "Documents\Baldur's Gate - Enhanced Edition\Baldur.ini" in Win 7 and at "My Documents\Baldur's Gate - Enhanced Edition\Baldur.ini" in Win XP.  You will need to add these entries:</p>
           <div class="important">
-            <p>	'MOVIES',	'BEREGOST',	'1',	<br />
+            <p>
+	'MOVIES',	'BEREGOST',	'1',	<br />
 	'MOVIES',	'BG4LOGO',	'1',	<br />
 	'MOVIES',	'BGENTER',	'1',	<br />
 	'MOVIES',	'BGSUNRIS',	'1',	<br />
@@ -356,10 +359,11 @@
 	'MOVIES',	'BILOGO',	'1',	<br />
 	'MOVIES',	'BIOWBOTH',	'1',	<br />
 	'MOVIES',	'BLACKPIT',	'1',	<br />
-	'MOVIES',	'CAMP',	'1',	<br />
+	'MOVIES',	'BWDRAGON',	'1',	<br />
+	'MOVIES',	'CAMP',		'1',	<br />
 	'MOVIES',	'CNDLKEEP',	'1',	<br />
-	'MOVIES',	CREDITS',	'1',	<br />
-	'MOVIES',	DAYNITE',	'1',	<br />
+	'MOVIES',	'CREDITS',	'1',	<br />
+	'MOVIES',	'DAYNITE',	'1',	<br />
 	'MOVIES',	'DEATHAND',	'1',	<br />
 	'MOVIES',	'DUNGEON',	'1',	<br />
 	'MOVIES',	'DURLAG',	'1',	<br />
@@ -373,18 +377,20 @@
 	'MOVIES',	'IRONTHRN',	'1',	<br />
 	'MOVIES',	'MINEFLOD',	'1',	<br />
 	'MOVIES',	'NASHKELL',	'1',	<br />
-	'MOVIES',	NITEDAY',	'1',	<br />
+	'MOVIES',	'NITEDAY',	'1',	<br />
 	'MOVIES',	'PALACE',	'1',	<br />
-	'MOVIES',	'REST',	'1',	<br />
-	'MOVIES',	RESTINN',	'1',	<br />
-	'MOVIES',	RESTDUNG',	'1',	<br />
+	'MOVIES',	'REST',		'1',	<br />
+	'MOVIES',	'RESTDUNG',	'1',	<br />
+	'MOVIES',	'RESTINN',	'1',	<br />
 	'MOVIES',	'SEWER',	'1',	<br />
 	'MOVIES',	'TAVERN',	'1',	<br />
 	'MOVIES',	'TSRLOGO',	'1',	<br />
+	'MOVIES',	'WOTC',		'1',	<br />
 	'MOVIES',	'WRECK',	'1',	<br />
-	'MOVIES',	'WYVERN',	1',	<br />
-</p>
+	'MOVIES',	'WYVERN',	'1',	<br />
+            </p>
           </div>
+            <p>If you have followed the above steps and the mod is still not installing properly, you might find reading <a href="http://www.shsforums.net/topic/41036-faq-for-the-megamods/page__p__504045#entry504045">The common Windows Vista and Windows 7 problems</a> helpful.  Particularly, sections 2.1, 2.2.1, and 2.2.2.</p>
           <address>
             <span class="footer">BG: EE Classic Movies &gt; Installation</span> &#8226;<a href="#top">BACK TO TOP</a>
           </address>
@@ -394,6 +400,7 @@
         <a name="faq" id="faq"></a>
         <div class="content">
           <h2>Frequently Asked Questions</h2>
+          <p><strong>Q: When I run the installer, I get this error:  <i>FATAL ERROR: Failure("Unable to find DIALOG.TLK")</i>.  How do I get it to install?</strong><br />A: Read the section on <a href="#installation">Installation</a>, and follow the instructions in the in the link (Player how-to: Getting mods to work on BGEE) provided.</p>
           <p><strong>Q: Why does MOVIDESC.2DA and Baldur.ini need to be modified?</strong><br />A: The Baldur.ini and MOVIDESC.2DA are modified so that all of the movies can be viewed in the "Movies" dialog of the GUI.  Since not all of the movies from BG1 are actually used in BGEE, this is the only way to watch them.</p>
           <address>
             <span class="footer">BG: EE Classic Movies &gt; FAQ</span> &#8226;<a href="#top">BACK TO TOP</a>
@@ -432,6 +439,11 @@
           <h6>06 December 2012 - Version 0.03:</h6>
           <ul>
             <li>Re-enable the Beregost movie when you first travel to the area.</li>
+          </ul>
+          <h6>12 December 2012 - Version 0.04:</h6>
+          <ul>
+            <li>Added BWDRAGON (Bioware logo movie) and WOTC (WOTC Logo) from BGII.</li>
+            <li>All movies were resized to the same dimensions (1280x720) as the new BG:EE movies while maintaining their aspect ratios.</li>
           </ul>
           <address>
             <span class="footer">BG: EE Classic Movies &gt; Version History</span> &#8226;<a href="#top">BACK TO TOP</a>
