Added Spanish translation (thanks to Unknow_error)

--- a/BGEEClassicMovies/ReadMe-BGEEClassicMovies.html
+++ b/BGEEClassicMovies/ReadMe-BGEEClassicMovies.html
@@ -273,7 +273,7 @@
         <p class="about">
           <a href="http://www.shsforums.net/topic/55573-bg-ee-classic-movies/">Mod Website</a> &#8226;
           <a href="http://www.shsforums.net/topic/55573-bg-ee-classic-movies/">Mod Forum</a> &#8226;
-          Version: 1.00
+          Version: 1.10
         </p>
         <hr>
         <p class="menu">
@@ -382,6 +382,10 @@
         <a id="version"></a>
         <div class="content">
           <h2>Version history</h2>
+          <h6>Version 1.10: <a href="https://github.com/Sampsca/BGEE-Classic-Movies">on GitHub</a></h6>
+          <ul>
+            <li>Added Spanish translation (thanks to Unknow_error).</li>
+          </ul>
           <h6>Version 1.00: <a href="https://github.com/Sampsca/BGEE-Classic-Movies">on GitHub</a></h6>
           <ul>
             <li>Added support for BGEE/SoD V2+</li>
