Added German localization and translation (thanks to jaydee2k)

--- a/BGEEClassicMovies/ReadMe-BGEEClassicMovies.html
+++ b/BGEEClassicMovies/ReadMe-BGEEClassicMovies.html
@@ -273,7 +273,7 @@
         <p class="about">
           <a href="http://www.shsforums.net/topic/55573-bg-ee-classic-movies/">Mod Website</a> &#8226;
           <a href="http://www.shsforums.net/topic/55573-bg-ee-classic-movies/">Mod Forum</a> &#8226;
-          Version: 2.0.0
+          Version: 2.1.0
         </p>
         <hr>
         <p class="menu">
@@ -384,13 +384,17 @@
         <a id="version"></a>
         <div class="content">
           <h2>Version history</h2>
+          <h6>Version 2.1.0: <a href="https://github.com/Sampsca/BGEE-Classic-Movies">on GitHub</a></h6>
+          <ul>
+            <li>Added German localization and translation (thanks to jaydee2k)</li>
+          </ul>
           <h6>Version 2.0.0: <a href="https://github.com/Sampsca/BGEE-Classic-Movies">on GitHub</a></h6>
           <ul>
             <li>Added component to Restore BG1 Chapter and Dream Screens</li>
           </ul>
           <h6>Version 1.10: <a href="https://github.com/Sampsca/BGEE-Classic-Movies">on GitHub</a></h6>
           <ul>
-            <li>Added Spanish translation (thanks to Unknow_error).</li>
+            <li>Added Spanish localization and translation (thanks to Unknow_error).</li>
           </ul>
           <h6>Version 1.00: <a href="https://github.com/Sampsca/BGEE-Classic-Movies">on GitHub</a></h6>
           <ul>
